--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,18 @@
 
   {% include head.html %}
 
-
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include services.html %}
-    {% include portfolio_grid.html %}
-    {% include about.html %}
-    {% include team.html %}
-    {% include clients.html %}
+      {% comment %}
+      {% include services.html %}
+      {% endcomment %}
+    {% include weekly.html %}
+    {% include sankirtan.html %}
+      {% comment %}
+      {% include team.html %}
+      {% include clients.html %}
+      {% endcomment %}
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
