Update the hero text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">HARE KRISHNA!</div>
-                <div class="intro-heading">ISKCON – Tri Center Valley</div>
+                <div class="intro-heading">ISKCON – Tri Central Valley</div>
                 <a href="#weekly" class="page-scroll btn btn-xl">Learn more</a>
             </div>
         </div>
