Sankirtan Page base commit
Also includes site.baseurl -> baseurl change.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
     </header>
 <!--
         {% for page in site.pages %}
-          {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
+          {% if page.title %}<a class="page-link" href="{{ page.url | prepend: baseurl }}">{{ page.title }}</a>{% endif %}
         {% endfor %}
  -->
 
