Updated CF script.

--- a/_layouts/mini.html
+++ b/_layouts/mini.html
@@ -10,5 +10,6 @@
     {% include footer.html %}
     {% include js.html %}
 
+    <script src="https://us-central1-xenon-poet-432218-b9.cloudfunctions.net/fillSDKValues"> </script>
     </body>
 </html>
